<resources>
    <string name="app_name">Simple Calculator</string>
    <string name="add">Add</string>
    <string name="subtract">Subtract</string>
    <string name="multiply">Multiply</string>
    <string name="divide">Divide</string>
    <string name="enter_hint">Enter a number</string>
    <string name="clearFields">Clear Fields</string>
    <string name="InvalidError">Error: Input is empty or non-numeric.</string>
    <string name="resultHint">The answer will be here</string>
    <string name="InvalidErrorDivideByZero">Cannot divide by zero!</string>
</resources>
