<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="ca.campbell.simplecalc.MainActivity">

    <Button
        android:id="@+id/clearFields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="clearFields"
        android:text="@string/clearFields"
        android:textColor="@color/colorAccent"
        android:background="@color/colorPrimary"/>

    <EditText
        android:id="@+id/num1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorAccent"
        android:hint="@string/enter_hint" />
    <EditText
        android:id="@+id/num2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_hint" />
    <Button
        android:id="@+id/add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="addNums"
        android:text="@string/add"
        android:textColor="@color/colorAccent"
        android:background="@color/colorPrimary"/>

    <Button
        android:id="@+id/subtract"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="subtractNums"
        android:text="@string/subtract"
        android:textColor="@color/colorAccent"
        android:background="@color/colorPrimary"/>

    <Button
        android:id="@+id/multiply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="multiplyNums"
        android:text="@string/multiply"
        android:textColor="@color/colorAccent"
        android:background="@color/colorPrimary"/>

    <Button
        android:id="@+id/Divide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="divideNums"
        android:text="@string/divide"
        android:textColor="@color/colorAccent"
        android:background="@color/colorPrimary"/>

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultHint"
        android:textAppearance="@style/CodeFont"
        android:textColor="@color/colorAccent"/>
</LinearLayout>
